@@ -56,6 +56,7 @@ export(as_term_list)
 export(as_terms)
 export(assign_validation_task)
 export(classification_project)
+export(classification_template)
 export(classify)
 export(collapse_tags)
 export(colo)
