@@ -39,8 +39,8 @@ classification_project <- function (path = "new", open = is.global(2)){
     cat(paste(rproj, collapse = "\n"), file = file.path(path, ".Rproj"))
 
     cat(paste(dat_clean, collapse = "\n"), file = file.path(path, "scripts", "01_data_cleaning.R"))
-    script <- system.file("extra_docs/02_classification.R", package = "termco")
-    file.copy(script, file.path(path, "scripts"), TRUE, TRUE)
+    classification_template(path = 'scripts/02_classification.R', file.ext = 'csv',
+        categories.file = 'categories/categories.R')
 
     verify <- all(c(dirs, ".Rproj") %in% dir(path, all.files = TRUE)) &&
         all(file.exists(file.path(path, c("categories/categories.R",
